--- a/src/styles.css
+++ b/src/styles.css
@@ -172,7 +172,7 @@ QWidget {
     width: 18px;
     height: 18px;
     border-radius: 3px;
-    background-color: white;
+    background-color: black;
     border: 2px solid white;
 }
 
